-
Bug
-
Resolution: Fixed
-
P4
-
12
-
b11
-
s390x
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8212924 | 11.0.2 | Lutz Schmidt | P4 | Resolved | Fixed | b02 |
Recent discussion (e.g. JDK-8209786) re new warnings with gcc7.3 triggered a review of s390 platform code. A few places were found which should be fixed to not rely on "undefined" or "compiler-defined" behaviour. See the attached text file for a summary of what's well-defined and what is not.
- backported by
-
JDK-8212924 [s390]: Use of shift operators not covered by cpp standard
-
- Resolved
-