8210319: [s390]: Use of shift operators not covered by cpp standard

Reviewed-by: mdoerr, goetz